Fix for chevron alignment.

--- a/resources/less/geometry/file-tree.less
+++ b/resources/less/geometry/file-tree.less
@@ -10,6 +10,10 @@
     outline: none;
     transition:0.3s left ease;
 
+    clr-icon {
+      vertical-align: text-bottom;
+    }
+
     &.hidden { left:-100%; }
 
     #directories-dirs-header, #directories-files-header {
@@ -22,7 +26,6 @@
         height: 12px;
         margin-left: 3px;
         margin-right: 3px;
-        vertical-align: bottom;
       }
     }
 
